k8s_config/base/backend/deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  progressDeadlineSeconds: 300
  selector:
    matchLabels:
      app: backend
      tier: backend
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: backend
        tier: backend
    spec:
      containers:
        - name: backend
          imagePullPolicy: IfNotPresent
          command: ["/bin/sh", "-c"]
          args:
            - "npm run start"
          ports:
            - containerPort: 4000
              name: backend
          resources:
            requests:
              memory: "124Mi"
              cpu: "300m"
            limits:
              memory: "1280Mi"
              cpu: "1000m"
