k8s_config/base/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  ports:
    - port: 5001
      targetPort: 5000
      name: backend-http
  type: NodePort
