k8s_config/base/backend/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    kubernetes.io/ingress.allow-http: "false" # stops 80 forwarding rule being created
